# BikeConstructor

./: .travis.yml  CMakeLists.txt  README.md
data/: bike.db
src/: accessory.cpp  accessory.h  basket.cpp  basket.h  const.h  database.cpp  database.h  functions.cpp  functions.h  mainwindow.cpp  mainwindow.h
src/data/: bike1.db
